# native_log

./: CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/cn/jiedev/native_log_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: native_log.podspec  native_log_plus.podspec
ios/Classes/: native_log.c
lib/: native_log.dart  native_log_bindings_generated.dart
src/: CMakeLists.txt  native_log.c  native_log.h
